# Pea

./: .gitignore  Cargo.toml  GUIDEMAP.md  LICENSE.md  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
crates/pea-benchmarks/: Cargo.toml
crates/pea-benchmarks/benches/: GUIDEMAP.md  hash.rs  install.rs  parse.rs  resolve.rs
crates/pea-benchmarks/src/: common.rs  lib.rs
crates/pea-cache/: Cargo.toml  GUIDEMAP.md
crates/pea-cache/src/: lib.rs
crates/pea-cache/src/cas/: GUIDEMAP.md  hash.rs  index.rs  mod.rs  store.rs
crates/pea-cache/src/link/: GUIDEMAP.md  linker.rs  mod.rs
crates/pea-cache/src/tarball/: GUIDEMAP.md  create.rs  extract.rs  mod.rs
crates/pea-cli/: Cargo.toml  GUIDEMAP.md  build.rs
crates/pea-cli/src/: main.rs
crates/pea-cli/src/commands/: GUIDEMAP.md  add.rs  build.rs  init.rs  install.rs  mod.rs  new.rs  remove.rs  run.rs  test.rs  tests.rs
crates/pea-cli/src/output/: GUIDEMAP.md  colors.rs  errors.rs  mod.rs  progress.rs
crates/pea-config/: Cargo.toml  GUIDEMAP.md
crates/pea-config/proptest-regressions/toml/: mod.txt
crates/pea-config/src/: lib.rs
crates/pea-config/src/json/: GUIDEMAP.md  mod.rs
crates/pea-config/src/merge/: GUIDEMAP.md  mod.rs
crates/pea-config/src/toml/: GUIDEMAP.md  mod.rs
crates/pea-core/: Cargo.toml  GUIDEMAP.md
crates/pea-core/proptest-regressions/types/: version.txt
crates/pea-core/src/: lib.rs
crates/pea-core/src/error/: GUIDEMAP.md  mod.rs
crates/pea-core/src/types/: GUIDEMAP.md  dependency.rs  mod.rs  package.rs  version.rs
crates/pea-core/src/utils/: GUIDEMAP.md  hash.rs  mod.rs  path.rs
crates/pea-registry/: Cargo.toml  GUIDEMAP.md
crates/pea-registry/src/: lib.rs
crates/pea-registry/src/api/: GUIDEMAP.md  mod.rs
crates/pea-registry/src/cache/: GUIDEMAP.md  mod.rs  tests.rs
crates/pea-registry/src/client/: GUIDEMAP.md  mod.rs  tests.rs
crates/pea-resolver/: Cargo.toml  GUIDEMAP.md
crates/pea-resolver/proptest-regressions/sat/: mod.txt
crates/pea-resolver/src/: lib.rs
crates/pea-resolver/src/graph/: GUIDEMAP.md  mod.rs
crates/pea-resolver/src/sat/: GUIDEMAP.md  mod.rs
crates/pea-resolver/src/semver/: GUIDEMAP.md  mod.rs
scripts/: bench-all.sh  bench-cold-start.sh  bench-install.sh  bench-resolve.sh  benchmark-workflow.sh  detect-regressions.sh  generate-trend-report.sh  profile-all.sh  profile-install.sh  profile-parse.sh  profile-resolve.sh  store-benchmark-results.sh
