[workspace]
resolver = "2"
members = [
    "crates/pea-core",
    "crates/pea-cli",
    "crates/pea-config",
    "crates/pea-registry",
    "crates/pea-resolver",
    "crates/pea-cache",
    "crates/pea-benchmarks",
    # TODO: Add other crates as they are implemented
    # "crates/pea-lockfile",
    # "crates/pea-runtime",
    # "crates/pea-parser",
    # "crates/pea-bundler",
    # "crates/pea-test",
    # "crates/pea-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pea-lang/pea"
authors = ["Pea Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"

# HTTP & Networking
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
hyper = { version = "1.1", features = ["full"] }
quinn = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.21"
rkyv = { version = "0.7", features = ["validation"] }

# Hashing & Crypto
blake3 = "1.5"
ring = "0.17"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Graphs & Data Structures
petgraph = "0.6"
dashmap = "5.5"
indexmap = { version = "2.1", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File System
walkdir = "2.4"
notify = "6.1"
glob = "0.3"
memmap2 = "0.9"
flate2 = "1.0"
tar = "0.4"

# Path Handling
camino = "1.1"
pathdiff = "0.2"

# URL & Semver
url = "2.5"
semver = "1.0"

# Parsing (oxc)
oxc_parser = "0.6"
oxc_allocator = "0.6"
oxc_span = "0.6"
oxc_ast = "0.6"
oxc_transformer = "0.6"
oxc_codegen = "0.6"
oxc_minifier = "0.6"

# Wasm Runtime
wasmtime = "16.0"

# Testing
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"

# Profiling
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Misc
once_cell = "1.19"
parking_lot = "0.12"
bytecheck = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1
