[package]
name = "pea-cli"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast JavaScript/TypeScript runtime and package manager CLI"
license = "MIT"

[[bin]]
name = "pea"
path = "src/main.rs"

[dependencies]
# Core types
pea-core = { path = "../pea-core" }
pea-config = { path = "../pea-config" }
pea-registry = { path = "../pea-registry" }
pea-resolver = { path = "../pea-resolver" }
pea-cache = { path = "../pea-cache" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# File system
walkdir = { workspace = true }

# Path handling
camino = { workspace = true }

# Temporary directories
tempfile = { workspace = true }

# Home directory detection
dirs = "5.0"

# Build dependencies
[build-dependencies]
chrono = "0.4"

# Development dependencies
[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.8"
tokio-test = "0.4"
criterion = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }

# Benchmark configuration
[[bench]]
name = "install"
harness = false
path = "../../benches/install.rs"

[[bench]]
name = "resolve"
harness = false
path = "../../benches/resolve.rs"

[[bench]]
name = "parse"
harness = false
path = "../../benches/parse.rs"

[[bench]]
name = "hash"
harness = false
path = "../../benches/hash.rs"