[package]
name = "pea-config"
version = "0.1.0"
edition = "2021"
description = "Configuration parsing for Pea runtime"
license = "MIT"
repository = "https://github.com/pea-lang/pea"

[dependencies]
# Workspace dependencies
pea-core = { path = "../pea-core" }

# TOML parsing with error locations
toml_edit = "0.22"
toml = "0.8"

# JSON parsing
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Path handling
camino = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["fs", "io-util"] }

# Property testing
proptest = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = []
property-tests = ["proptest"]