[package]
name = "pea-registry"
version = "0.1.0"
edition = "2021"
description = "npm registry client for Pea runtime"
license = "MIT"
repository = "https://github.com/pea-lang/pea"

[dependencies]
# Workspace dependencies
pea-core = { path = "../pea-core" }

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"

# Hashing & integrity
blake3 = "1.5"
hex = "0.4"
sha1 = "0.10"
base64 = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Caching
dashmap = "5.5"

# Path handling
camino = "1.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.5"