[package]
name = "pea-resolver"
version = "0.1.0"
edition = "2021"
description = "Dependency resolution engine for Pea runtime"
license = "MIT"
repository = "https://github.com/pea-lang/pea"

[dependencies]
# Workspace dependencies
pea-core = { path = "../pea-core" }
pea-registry = { path = "../pea-registry" }

# Graph algorithms
petgraph = "0.6"

# Parallel processing
rayon = "1.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Concurrent data structures
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Path handling
camino = "1.1"

# Collections
indexmap = { version = "2.1", features = ["serde"] }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.0"
criterion = { workspace = true }